# RustySim

./: Cargo.toml  README.md  notas.txt
src/: main.rs  utils.rs
