[package]
name = "hold"
version = "0.1.0"
authors = ["Kevin Frez <kevin.frez.p@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "sync"] }
# futures = "0.3.5"
trait-async = "0.1.24"
log = "0.4"
env_logger = "0.7.1"
priority-queue = "1.0.0"
hashbrown = "0.9.0"
