[package]
name = "hold"
version = "0.1.0"
authors = ["Kevin Frez <kevin.frez.p@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["full"] }
# futures = "0.3.5"
async-trait = "0.1"
# log = "0.4"
# env_logger = "0.8"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
priority-queue = "1"
hashbrown = "0.9"
